fix icons and menu collapse

--- a/src/components/layout/sider/sider.module.less
+++ b/src/components/layout/sider/sider.module.less
@@ -17,6 +17,11 @@
   text-align: center;
 }
 
-.capitalize {
+.menu {
   text-transform: capitalize;
+  a,
+  a:hover,
+  a:focus {
+    color: inherit;
+  }
 }
